# mvp-score-modelling

./: .gitignore  README.md  class_conditional.ipynb  linear_kernel.ipynb  napkin.ipynb  presentation.md  pyproject.toml  requirements.txt  toy_classifier.pt
checkpoints/: README.md
mvp_score_modelling/: nn.py  pipelines.py  utils.py
mvp_score_modelling/evaluation/: class_conditional_inference.py  fid.py  save_celeb.py
mvp_score_modelling/pipelines/: class_conditional.py  colorisation.py  deblurring.py  inpainting.py  super_resolution.py  superresolution.py  utils.py
notebooks/: analysis.ipynb  class_conditional.ipynb  conditional.ipynb  fid-test.ipynb  linear_kernel.ipynb  save-celeb-test.ipynb  visualisation.ipynb
scripts/: class_conditional_inference.py  fid.py  save_celeb_training.py  train_gender_classifier.py  unconditional_inference.py
